@@ -620,8 +620,8 @@ class IPCompleter(Completer):
             except IndexError:
                 return None
         except:
-            #from IPython.ultraTB import AutoFormattedTB; # dbg
-            #tb=AutoFormattedTB('Verbose');tb() #dbg
+            from IPython.ultraTB import AutoFormattedTB; # dbg
+            tb=AutoFormattedTB('Verbose');tb() #dbg
 
             # If completion fails, don't annoy the user.
             return None
